# studia

./: .gitignore  push.sh
C++/kol/: Bazowa.h  GrupaDziekanska.cpp  GrupaDziekanska.h  Pochodna.h  mail  main.cpp
C++/lab1/: Animal.cpp  Animal.h  Cat.h  Dog.cpp  Dog.h  main.cpp
C++/lab2/: Developer.cpp  Developer.h  Employee.cpp  Employee.h  TeamLeader.cpp  TeamLeader.h  lab2.cpp
C++/lab2_bufor/: Bufor.cpp  Bufor.h  CMakeLists.txt  MaxBuffer.cpp  MaxBuffer.h  MeanBuffer.cpp  MeanBuffer.h  main.cpp
C++/lab3_szablony/: Array.cpp  Array.h  CMakeLists.txt  main.cpp  minimal.h
C++/lab4/: CMakeLists.txt
C++/lab4_sequence_containers/: main.cpp
C++/lab5_associative_containers/: CMakeLists.txt  main.cpp
C++/lab6_boost/: CMakeLists.txt  main.cpp
C++/lab6_boost/include/: Contact.h  Contacts.h
C++/lab6_boost/src/: Contact.cpp  Contacts.cpp
C++/lab7_qt/: CMakeLists.txt  main.cpp
C++/lab9_in_out/: CMakeLists.txt  main.cpp
PHP/: ankieta.php  ankieta.txt  formularz.php  funkcje.php  galeria.php  index.php  index2.php  init.sh  odbierz.php  odbierz3.php  odbierz4.php  pliki.php  processLogin.php  receive.php  receive2.php  test2.php  typy.php  users.xml  zdjecia.php
PHP/class/: Database.php  RegistrationForm.php  User.php  UserManager.php
PHP/klasy/: RegistrationForm.php  User.php
Swift/: lab10_objects.swift  lab12_protocols.swift  lab9_structs.swift
ang/: 14l.md  15p.md  17p.md  22p.md  24p.md  28l.md  7l.md
chmury/: Dockerfile_scratch  multistage.dockerfile  nginx.conf  server.pl
mikro/: lab1.c  lab2.c  lab3.c  lab4_usart.c  main.c
(+98 files in other folders)
